--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="prompt_login">Identifier</string>
     <string name="prompt_password">Mot de passe</string>
     <string name="action_sign_in">Se connecter</string>
+    <string name="role_user">USER</string>
+    <string name="role_codis">CODIS</string>
 </resources>
