--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,5 +46,8 @@
     <string name="liberer">Liberer</string>
     <string name="parking">Parking</string>
     <string name="supprimer">Supprimer</string>
+    <string name="segment">photos sur points</string>
+    <string name="zone">photos de zone</string>
+    <string name="stop">STOP</string>
 
 </resources>
