Modification name of button zone

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,7 +53,7 @@
     <string name="supprimer">Supprimer</string>
     <!--drone-->
     <string name="drone_segment">photos le long d\'un segment</string>
-    <string name="drone_zone">photos de zone</string>
+    <string name="drone_zone">Vidéo de zone</string>
     <string name="drone_stop">STOP</string>
     <string name="drone_annule">annuler</string>
     <string name="drone_fin">valider</string>
