--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">DroneProject</string>
 
     <!-- Strings related to login -->
-    <string name="prompt_login">Identifier</string>
+    <string name="prompt_login">Identifiant</string>
     <string name="prompt_password">Mot de passe</string>
     <string name="action_sign_in">Se connecter</string>
     <string name="role_user">COS</string>
